# memristor

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md
doc/: model.tex
mesh/: mesh.geo  mesh.msh  mesh2.msh  mesh3.msh
script/: fem.m  make_movie.sh  monte_carlo.m
src/: grid3.hpp  heat_boundary_cond.hpp  heat_solver.hpp  heat_system.hpp  interpolate.hpp  memristor.cpp  monte_carlo.hpp  params.hpp  point3.hpp  poisson_boundary_cond.hpp  poisson_solver.hpp  poisson_system.hpp  printer.hpp  resistance.cpp  resistance.hpp  simulator.filament.cpp  simulator.hpp  simulator.init.cpp  simulator_filament.cpp  simulator_init.cpp  tags_as_solution.hpp
src/heat/: boundary_cond.hpp  solver.hpp  system.hpp
src/monte_carlo/: grid.hpp  interpolate.hpp  is_point_available.hpp  matrix3.hpp  monte_carlo.hpp  neighbour.hpp  point.hpp  rate.hpp  rates_table.hpp  tensor.hpp  write_occupied.hpp
src/poisson/: boundary_cond.hpp  element.hpp  solver.hpp  system.hpp
